--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "nickeltin"
   ],
   "author": {
-    "name": "Valentyn Romanyshyn",
-    "email": "valentun001@gmail.com"
+    "name": "nickeltin",
+    "email": "valentyn001@gmail.com"
   },
   "hideInEditor": true
 }
