--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://nickeltin-private.glitch.me/'
+      - run: npm install
       - run: npm ci
       - run: npm publish
         env:
